# giibiiadvance

./: .gitignore  CMakeLists.txt  GiiBiiAdvance.cbp  LICENSE  Makefile  Makefile.libretro  README.md  build_options.h  clean.bat  config.c  config.h  gui_config.c  gui_config.h  gui_gb_debugger.c  gui_gb_debugger.h  gui_gb_debugger_vram.c  gui_gb_debugger_vram.h  gui_gba_debugger.c  gui_gba_debugger_vram.c  gui_gba_debugger_vram.h  gui_main.c  gui_main.h  gui_mainloop.c  gui_mainloop.h  gui_sgb_debugger.c  gui_sgb_debugger.h  gui_text_windows.c  gui_text_windows.h  installer.nsi  main.c  main.h  resource.h  resource.rc  save_png.c  save_png.h  splash.c  splash.h  text_data.c
frontend/: config.c  config.h  main.c  util.c
frontend/libretro/: Makefile  libretro.c
frontend/windows/: GiiBiiAdvance.cbp  GiiBiiAdvance.exe.Manifest  config.c  gui_config.c  gui_gb_debugger.c  gui_gb_debugger_vram.c  gui_gba_debugger.c  gui_gba_debugger.h  gui_gba_debugger_vram.c  gui_main.c  gui_main.h  gui_mainloop.c  gui_mainloop.h  gui_screenshot.c  gui_screenshot.h  gui_sgb_debugger.c  gui_sound.c  gui_text_windows.c  gui_text_windows.h  main.c  resource.rc  splash.c  splash.h  text_data.c
gb_core/: cpu.c  cpu.h  debug.c  debug.h  gameboy.h  gb_main.c  gb_main.h  general.c  general.h  interrupts.c  interrupts.h  licensees.h  mbc.c  mbc.h  memory.c  memory.h  noise.c  rom.c  rom.h  serial.c  serial.h  sgb.c  sgb.h  sound.c  sound.h  video.c  video.h
gba_core/: arm.c  bios.c  bios.h  cpu.c  cpu.h  disassembler.c  disassembler.h  dma.c  dma.h  gba.c  gba.h  interrupts.c  interrupts.h  licensees.c  memory.c  memory.h  rom.c  rom.h  save.c  save.h  shifts.h  sound.c  sound.h  thumb.c  timers.c  timers.h  video.c  video.h
png/: save_png.c
png/libpng-1.5.4/: pnglibconf.h
